# fractal

./: .gitignore  Cargo.toml  README.md  noxfile.py  pyproject.toml  simplex.py
.vim/: coc-settings.json
cogn/: Cargo.toml  README.md
cogn/examples/mind/: duel.rs
cogn/src/: cognition.rs  interval.rs  recognizing.rs  reconstruction.rs
cogn/src/evolve/: observeds.rs
cogn/src/flow/: flow.rs
cogn/src/imagine/: fantasy.rs
cogn_action/: README.md
cogn_brain/: Cargo.toml  README.md
cogn_brain/_op/: parameters.rs
cogn_brain/src/: _brain.rs
cogn_core/: README.md
cogn_core/src/: flowing.rs  level.rs
cogn_daemon/: README.md
cogn_daemon/src/: daemon.rs
cogn_demon/: _arena.rs  awe.rs
cogn_demon/glimpse/: flashed.rs
cogn_demon/interpret/: interpret.rs
cogn_demon/src/: _action.rs  acumen.rs  analyze.rs  climb.rs  excite.rs
cogn_fractum/examples/: tictactoe.rs
cogn_mech/examples/: tictactoe.rs
cogn_mind/_op/: odyssey.rs
cogn_mind/odyssey/: reflected.rs
cogn_world/: Cargo.toml  README.md
cogn_world/examples/: tic-tac-toe.rs
cogn_world/src/: mod.rs  nature.rs  regime.rs  world.rs
cognate_brain/: mod.rs
cognate_brain/_op/: evaluate.rs
cognate_demon/glimpse/: glimpse.rs
cognate_world/: Cargo.toml
cognate_world/src/: _world.rs
examples/mind/: reflect.rs
examples/tictactoe/: parameters.py  world.py
examples/ttt/: parameters.rs  world.rs
src/: _awakened.rs  complex.rs  path.rs  simplex.rs
src/_op/: awaken.rs  flow.rs
src/brain/: path.rs
src/frame/: frame.rs  local.rs
src/hedron/: edges.py  face.py  project.py  projection.py
src/simplex/: cell.rs  edge.rs  face.rs  nsimplex.rs  perceptron.rs  polyhedra.rs  simplex.rs  symmetry.rs
src/topology/: coordinate.rs  element.rs  polyhedron.rs  simplicial.rs  topology.rs
src/topos/: epr-resolution.md  flaming.py  left.py
src/wave/: hmm.md  oscillation.rs  wave.rs
tests/: test_topos2.py
(+833 files in other folders)
