
[tool.poetry]
name = "topos"
version = "0.1.0"
description = "Rl"
authors = ["Jed Hsu <jedhsu@pm.me>"]
readme = "README.rst"
repository = "https://github.com/jedhsu/topos"


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
pre-commit-hooks = "^4.0.1"

flake8 = "*"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
cohesion = "^1.0.0"

black = "^21.7b0"
reorder-python-imports = "^2.6.0"

mypy = "^0.910"
typical = "^2.4.2"
marshmallow = "^3.13.0"
safety = "^1.10.3"
typeguard = "^2.12.1"

pytest = "^6.2"
pytest-mock = "^3.6.1"

coverage = "^5.5"
pytest-cov = "^2.12.1"

xdoctest = "^0.15.5"
Sphinx = "^4.1.2"
sphinx-autodoc-typehints = "^1.12.0"

nitpick = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
select = ["B", "B9", "BLK", "C", "E", "F", "I", "W"]
application-import-names = ["topos", "tests"]
max-line-length = 88
ignore = ["E203", "E501", "W503", "D208", "D400"]
exclude = ["./.git", "./docs/src", "build"]

[tool.flake8.exceptions."**/__init__.py"]
pycodestyle = ["-F401"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
strict = true
pretty = true

show_column_numbers = true
show_error_codes = true
show_error_context = true

allow_redefinition = false
check_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true

strict_optional = true
strict_equality = true
warn_no_return = true
local_partial_types = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true


[tool."pyproject.toml".tool.black]
line-length = 88
